# napari-dpr

./: .gitignore  README.md  build_wheel_current.py  build_wheels.py  pyproject.toml  setup.py
.github/workflows/: build.yml  build_wheels.yml  build_wheels_backup.txt  publish.yml
.napari/: config.yml
archive/: build_wheels.py
src/: dpr.py  dpr_core.cpp  dpr_core.pyd  setup.py
src/napari_dpr/: _widget.py  dpr_core.cp310-win_amd64.pyd  dpr_core.cp311-win_amd64.pyd  dpr_core.cp312-win_amd64.pyd  dpr_core.cp313-win_amd64.pyd  dpr_core.cp39-win_amd64.pyd  dpr_core.cpp  run.dpr.py
src/napari_dpr/_tests/: __init__.py  test_widget.py
wheelhouse/: napari_dpr-0.1.0-cp310-cp310-win_amd64.whl  napari_dpr-0.1.0-cp311-cp311-win_amd64.whl  napari_dpr-0.1.0-cp312-cp312-win_amd64.whl  napari_dpr-0.1.0-cp313-cp313-win_amd64.whl  napari_dpr-0.1.0-cp39-cp39-win_amd64.whl
